--- a/package.json
+++ b/package.json
@@ -22,16 +22,18 @@
     "@angular/router": "~8.2.14",
     "bootstrap": "^4.4.1",
     "core-js": "^2.5.4",
+    "eslint": "^6.7.2",
     "jquery": "^3.4.1",
-    "ngx-toastr": "^9.1.1",
+    "ngx-toastr": "^11.2.1",
     "particle.js": "^1.0.7",
+    "popper.js": "^1.16.0",
     "rxjs": "~6.5.3",
     "serialize-javascript": "^2.1.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.20",
+    "@angular-devkit/build-angular": "^0.803.21",
     "@angular/cli": "~8.3.20",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "~8.2.14",
