--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
               "node_modules/bootstrap/scss/bootstrap.scss",
               "node_modules/bootstrap/scss/bootstrap-grid.scss",
               "node_modules/bootstrap/scss/bootstrap-reboot.scss",
-              "node_modules/ngx-toastr/toastr.css"
+              "node_modules/ngx-toastr/toastr.css",
+              "node_modules/primeng/resources/themes/nova-light/theme.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
