--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.14",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
@@ -20,36 +21,43 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "bootstrap": "^4.4.1",
-    "core-js": "^2.5.4",
-    "eslint": "^6.7.2",
-    "jquery": "^3.4.1",
-    "ngx-toastr": "^11.2.1",
+    "@fullcalendar/core": "^4.4.2",
+    "@fullcalendar/daygrid": "^4.4.2",
+    "@fullcalendar/interaction": "^4.4.2",
+    "bootstrap": "^4.5.2",
+    "chart.js": "^2.9.3",
+    "core-js": "^2.6.11",
+    "eslint": "^6.8.0",
+    "jquery": "^3.5.1",
+    "ngx-toastr": "^11.3.3",
     "particle.js": "^1.0.7",
-    "popper.js": "^1.16.0",
-    "rxjs": "~6.5.3",
-    "serialize-javascript": "^2.1.2",
-    "tslib": "^1.9.0",
+    "popper.js": "^1.16.1",
+    "primeicons": "^2.0.0",
+    "primeng": "^9.1.3",
+    "quill": "^1.3.7",
+    "rxjs": "^6.6.3",
+    "serialize-javascript": "^5.0.1",
+    "tslib": "^1.13.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.21",
-    "@angular/cli": "~8.3.20",
+    "@angular-devkit/build-angular": "^0.803.29",
+    "@angular/cli": "^8.3.29",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@types/angular": "^1.6.51",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/angular": "^1.7.3",
+    "@types/jasmine": "^2.8.17",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.1",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.4.1",
+    "karma": "^5.2.2",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
+    "protractor": "^7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.5.3"
