--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,9 @@
               "node_modules/bootstrap/scss/bootstrap-grid.scss",
               "node_modules/bootstrap/scss/bootstrap-reboot.scss",
               "node_modules/ngx-toastr/toastr.css",
-              "node_modules/primeng/resources/themes/nova-light/theme.css"
+              "node_modules/primeng/resources/themes/nova-light/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeicons/primeicons.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
