--- a/package.json
+++ b/package.json
@@ -12,54 +12,54 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.14",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "@fullcalendar/core": "^4.4.2",
-    "@fullcalendar/daygrid": "^4.4.2",
-    "@fullcalendar/interaction": "^4.4.2",
+    "@angular/animations": "~10.1.3",
+    "@angular/cdk": "^10.2.2",
+    "@angular/common": "~10.1.3",
+    "@angular/compiler": "~10.1.3",
+    "@angular/forms": "~10.1.3",
+    "@angular/platform-browser": "~10.1.3",
+    "@angular/platform-browser-dynamic": "~10.1.3",
+    "@angular/router": "~10.1.3",
+    "@fullcalendar/core": "^5.3.1",
+    "@fullcalendar/daygrid": "^5.3.2",
+    "@fullcalendar/interaction": "^5.3.1",
     "bootstrap": "^4.5.2",
     "chart.js": "^2.9.3",
-    "core-js": "^2.6.11",
-    "eslint": "^6.8.0",
+    "core-js": "^3.6.5",
+    "eslint": "^7.10.0",
     "jquery": "^3.5.1",
-    "ngx-toastr": "^11.3.3",
+    "ngx-toastr": "^13.0.0",
     "particle.js": "^1.0.7",
     "popper.js": "^1.16.1",
-    "primeicons": "^2.0.0",
-    "primeng": "^9.1.3",
+    "primeicons": "^4.0.0",
+    "primeng": "^10.0.0",
     "quill": "^1.3.7",
     "rxjs": "^6.6.3",
     "serialize-javascript": "^5.0.1",
-    "tslib": "^1.13.0",
-    "zone.js": "~0.9.1"
+    "tslib": "^2.0.1",
+    "zone.js": "^0.11.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.29",
-    "@angular/cli": "^8.3.29",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "~8.2.14",
+    "@angular-devkit/build-angular": "^0.1001.3",
+    "@angular/cli": "^10.1.3",
+    "@angular/compiler-cli": "^10.1.3",
+    "@angular/core": "^10.1.3",
+    "@angular/language-service": "~10.1.3",
     "@types/angular": "^1.7.3",
-    "@types/jasmine": "^2.8.17",
+    "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.2.2",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^5.2.2",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "@types/node": "~14.11.2",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~6.0.0",
+    "karma": "^5.2.3",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "^7.0.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.5.3"
+    "ts-node": "~9.0.0",
+    "tslint": "~6.1.3",
+    "typescript": "~4.0.3"
   }
 }
